Small icon visibility fix & updated links

--- a/webview-ui/src/Kaito/KaitoModels.module.css
+++ b/webview-ui/src/Kaito/KaitoModels.module.css
@@ -61,7 +61,9 @@ body {
     display: inline-block;
     padding-top: 0.35rem;
 }
-
+.arrowPath {
+    fill: var(--vscode-editor-foreground, #fff);
+}
 .dropdownContent {
     margin-top: 0.3rem;
     margin-left: 23px;
